# drill

distribution/: pom.xml
distribution/src/assemble/: bin.xml
exec/: pom.xml
exec/java-exec/: pom.xml
exec/java-exec/src/madlib/java/org/apache/drill/common/: SqlReusableExecutor.java
exec/java-exec/src/madlib/java/org/apache/drill/madlib/common/udf/: ArrayDotFunctions.java  ArrayScalarMultFunctions.java  GenerateSeriesFunctions.java
exec/java-exec/src/madlib/java/org/apache/drill/madlib/correlation/: Correlation.java
exec/java-exec/src/madlib/java/org/apache/drill/madlib/correlation/udf/: CorrelationAggFunctions.java  CovarianceFunctions.java
exec/java-exec/src/madlib/java/org/apache/drill/madlib/linregr/result/: LinregrResult.java
exec/java-exec/src/madlib/java/org/apache/drill/madlib/linregr/udf/: LinregrFinalFunctions.java  LinregrFunctions.java  LinregrHetFunctions.java  LinregrTransitionFunctions.java
exec/java-exec/src/main/codegen/: config.fmpp
exec/java-exec/src/main/codegen/data/: CastRepeated.tdd
exec/java-exec/src/main/codegen/templates/: CastRepeatedFunctions.java
exec/java-exec/src/main/java/org/apache/drill/exec/compile/sig/: ConstantExpressionIdentifier.java
exec/java-exec/src/main/java/org/apache/drill/exec/expr/: EvaluationVisitor.java  ExpressionTreeMaterializer.java
exec/java-exec/src/main/java/org/apache/drill/exec/expr/fn/: DrillAggFuncHolder.java  DrillFuncHolder.java  DrillSimpleFuncHolder.java
exec/java-exec/src/main/java/org/apache/drill/exec/expr/fn/interpreter/: InterpreterEvaluator.java
exec/java-exec/src/main/java/org/apache/drill/exec/ops/: ArrayMinorType.java  BaseFragmentContext.java  BiFunction.java  BufferManagerImpl.java  FragmentContext.java  QueryContext.java  UdfUtilities.java
exec/java-exec/src/main/java/org/apache/drill/exec/planner/logical/: DrillConstExecutor.java  DrillOptiq.java
exec/java-exec/src/main/java/org/apache/drill/exec/server/: Drillbit.java  InternalProxy.java
exec/java-exec/src/main/java/org/apache/drill/exec/server/rest/: InternalSessionResources.java  InternalUserConnection.java
exec/java-exec/src/main/java/org/apache/drill/exec/store/easy/json/reader/: BaseJsonProcessor.java
exec/java-exec/src/main/resources/: drill-module.conf
exec/jdbc-all/: pom.xml
exec/madlib/: .gitignore  pom.xml
exec/madlib/cpp/: CMakeLists.txt
exec/madlib/cpp/drill/: CMakeLists.txt
exec/madlib/cpp/drill/1.10/: CMakeLists.txt
exec/madlib/cpp/drill/cmake/: DrillUtils.cmake
exec/madlib/cpp/drill/common/: array.cpp  array.h  array_ops.cpp  common.cpp  common.h
exec/madlib/cpp/drill/dbconnector/: Allocator_impl.hpp  Allocator_proto.hpp  AnyType_impl.hpp  AnyType_proto.hpp  ArrayHandle_impl.hpp  Backend.hpp  Compatibility.hpp  EigenIntegration_impl.hpp  FunctionHandle_impl.hpp  FunctionHandle_proto.hpp  NativeRandomNumberGenerator_impl.hpp  OutputStreamBuffer_impl.hpp  PGException_proto.hpp  SystemInformation_impl.hpp  SystemInformation_proto.hpp  TypeTraits_impl.hpp  UDF_impl.hpp  UDF_proto.hpp  dbconnector.hpp  main.cpp
exec/madlib/cpp/drill/extension/: madlib.control_in
exec/madlib/cpp/drill/jni/: DrillJni.cpp  DrillJni.h  jni_ops.hpp
exec/madlib/cpp/drill/modules/: modules.hpp
exec/madlib/cpp/drill/modules/regress/: linear.hpp  logistic.hpp
exec/madlib/cpp/drill/modules/stats/: correlation.hpp
exec/madlib/cpp/patch/: AddDrill.patch.in  CPackLicense.patch.in  ChangeArrayType.patch.in  Copy_eigen_navtree_hacks.js.patch.in
exec/madlib/functions/: pom.xml
exec/madlib/functions/src/main/java/org/apache/drill/common/: ArgsValidator.java  SqlExecutor.java  Utils.java
exec/madlib/functions/src/main/java/org/apache/drill/madlib/common/: DataHolderUtils.java  GroupIterationController.java
exec/madlib/functions/src/main/java/org/apache/drill/madlib/common/udf/: ArrayPositionFunctions.java  ArrayUpperFunctions.java  LxTestFunctions.java
exec/madlib/functions/src/main/java/org/apache/drill/madlib/correlation/: CorrelationCPPFunctions.java
exec/madlib/functions/src/main/java/org/apache/drill/madlib/correlation/udf/: CorrelationFunctions.java
exec/madlib/functions/src/main/java/org/apache/drill/madlib/linregr/result/: HeteroskedasticityTestResult.java
exec/madlib/functions/src/main/java/org/apache/drill/madlib/linregr/udf/: LinearPredictFunctions.java  LinearRegressionFunctions.java
exec/madlib/functions/src/main/resources/: drill-module.conf
exec/madlib/jni/: pom.xml
exec/madlib/jni/src/madlib/java/org/apache/drill/madlib/jni/: DataProcessError.java  DrillJni.java
exec/memory/base/src/main/java/org/apache/drill/exec/ops/: BufferManager.java
exec/vector/src/main/codegen/templates/: BasicTypeHelper.java
logical/src/main/java/org/apache/drill/common/expression/: ArrayValueConstructorExpression.java  FunctionCallFactory.java
logical/src/main/java/org/apache/drill/common/expression/visitors/: AbstractExprVisitor.java  AggregateChecker.java  ArrayConstVisitor.java  ConditionalExprOptimizer.java  ConstantChecker.java  ExprVisitor.java  ExpressionValidator.java
